fix dependencies issues

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+matplotlib = "==3.8.4"
+numpy = "==2.2.1"
+pandas = "==2.2.3"
+seaborn = "==0.13.2"
 
 [dev-packages]
 
