--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ numpy = "==2.2.1"
 pandas = "==2.2.3"
 seaborn = "==0.13.2"
 scikit-learn = "==1.6.1"
-streamlit = "*"
+streamlit = "==1.41.1"
 
 [dev-packages]
 
